style: 모바일 페이지 스타일 변경

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -13,3 +13,10 @@ body > div {
   max-width: 960px;
   margin: 3rem auto 0;
 }
+
+@media screen and (max-width: 600px) {
+  body > div {
+    margin: 0 auto;
+    padding: 1rem;
+  }
+}
